# LLaVA-Med

./: .gitignore  README.md  STATEMENT.txt  download_data.py  pyproject.toml
data/pathvqa/: test_questions.jsonl
llava/eval/: __init__.py
llava/model/: builder.py  mhc.py
llava/model/language_model/: __init__.py  llava_mistral.py
llava/model/multimodal_encoder/: __init__.py
llava/model/multimodal_projector/: __init__.py
llava/train/: __init__.py  train.py
llava_med.egg-info/: PKG-INFO  SOURCES.txt
